--- a/index.html
+++ b/index.html
@@ -807,6 +807,16 @@
         </div>
     </section>
 
+    <!-- Map Section -->
+<section id="location">
+  <p class="section__text__p1 text-center">Find Me</p>
+  <h1 class="title text-center mb-2">My Location</h1>
+  <div style="width: 100%; max-width: 800px; margin: auto;">
+    <div id="map" style="height: 400px; border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);"></div>
+  </div>
+</section>
+
+
     <!-- Footer -->
     <footer>
         <nav>
@@ -898,6 +908,40 @@
         // Initialize
         document.body.style.opacity = '0';
         document.body.style.transition = 'opacity 0.3s ease';
+
+        let map;
+
+  function initMap() {
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(
+        position => {
+          const userLocation = {
+            lat: position.coords.latitude,
+            lng: position.coords.longitude
+          };
+
+          map = new google.maps.Map(document.getElementById("map"), {
+            center: userLocation,
+            zoom: 14
+          });
+
+          new google.maps.Marker({
+            position: userLocation,
+            map: map,
+            title: "You are here!"
+          });
+        },
+        () => {
+          alert("Geolocation failed. Allow location access.");
+        }
+      );
+    } else {
+      alert("Geolocation is not supported by this browser.");
+    }
+  }
+</script>
+<script async
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDX8TSGnIHySXjJ3GV883Poe-8T9gGZbt4&callback=initMap">
     </script>
 </body>
 </html>
