--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                 <h1 class="title animated-text">Slindokuhle Atlehang Ngidi</h1>
                 <p class="section__text__p2 animated-text">Full Stack Developer</p>
                 <div class="btn-container">
-                    <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">
+                    <button class="btn btn-color-2" onclick="window.open('./assets/Slindokuhle_Atlehang_Ngidi CV.pdf')">
                         Download CV
                     </button>
                     <button class="btn btn-color-1" onclick="location.href='#contact'">
